# JapaneseVerbConjugator

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  RunTests.sh  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
japverbgen/: decorators.py  negative_form_gen.py  positive_form_gen.py  utils.py  verb_form_gen.py
japverbgen/constants/: enumerated_types.py
src/: Decorators.py  JapaneseVerbFormGenerator.py  NegativeVerbFormGenerator.py  PositiveVerbFormGenerator.py  Utils.py  decorators.py  positive_form_gen.py  verb_form_gen.py
src/constants/: EnumeratedTypes.py  VerbEndingConstants.py  particle_constants.py  verb_ending_constants.py
src/japverbconj/: copula_gen.py  decorators.py  exceptions.py  negative_form_gen.py  positive_form_gen.py  utils.py  verb_form_gen.py
src/japverbconj/constants/: particle_constants.py  verb_ending_constants.py
tests/: DecoratorsTests.py  JapaneseVerbFormGeneratorTests.py  TestConstants.py  UtilsTests.py  constants.py  decorators_tests.py  requirements.txt  test_decorators.py  test_utils.py  test_verb_form_gen.py  utils_tests.py  verb_form_gen_tests.py
