[metadata]
name = japanese-verb-form-generator
version = 0.0.1

[options]
packages = find:
install_requires =
    romkan>=0.2.1

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
exclude=tests*