[metadata]
name = japanese-verb-conjugator-v2
version = 0.1.0
author = Jacob Shiohira
maintainer = Markus Kruse
maintainer_email = belshazzar314@gmail.com
description = Fork of the project https://github.com/jshiohaha/JapaneseVerbConjugator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bel-Shazzar/JapaneseVerbConjugator
project_urls = 
    Bug Tracker = https://github.com/jshiohaha/JapaneseVerbConjugator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic
license = BSD

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    romkan>=0.2.1

[options.packages.find]
where = src